Temporary visibility fix for getting feedback

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -149,5 +149,5 @@ a.next:hover {
 }
 
 .visible {
-  opacity: 1;
+  opacity: 1!important;
 }
